tests/neg/summonInline.check
-- Error: tests/neg/summonInline.scala:19:32 ---------------------------------------------------------------------------
19 |val missing1 = summonInlineCheck(1) // error
   |               ^^^^^^^^^^^^^^^^^^^^
   |               Missing One
   | This location contains code that was inlined from summonInline.scala:15
-- Error: tests/neg/summonInline.scala:20:32 ---------------------------------------------------------------------------
20 |val missing2 = summonInlineCheck(2) // error
   |               ^^^^^^^^^^^^^^^^^^^^
   |               Missing Two
   | This location contains code that was inlined from summonInline.scala:16
